# input-macro

./: Cargo.toml  README.md
examples/: hello.rs
src/: lib.rs
tests/: test.rs
